trying to fix avatar

--- a/css/shared_global.css
+++ b/css/shared_global.css
@@ -151,8 +151,8 @@
 }
 
 .playerAvatar.playerAvatarAutoSize {
-	width: 100%;
-	height: auto;
+	/*width: 100%;
+	height: auto;*/
 }
 
 .playerAvatar_friendindicator {
