--- a/css/profilev2.css
+++ b/css/profilev2.css
@@ -629,16 +629,8 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 
 .item_showcase .item_count_stat {
 	float: left;
+	margin-left: 12px;
 	padding-top: 14px;
-	max-width: 30%;
-}
-
-.item_showcase .item_count_stat > div {
-	padding-left: 12px;
-}
-
-.item_showcase .showcase_slot_row {
-	margin-left: -5px;
 }
 
 .item_showcase_item {
@@ -648,6 +640,10 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	margin-left: 5px;
 	margin-bottom: 5px;
 	border: 1px solid #3a3a3a;
+}
+
+.item_showcase_item:first-child {
+	margin-left: 0;
 }
 
 .item_showcase_item img.item_image {
@@ -833,6 +829,7 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 .workshop_showcase_item {
 	height: 160px;
 	position: relative;
+	padding-left: 170px;
 
 	overflow: hidden;
 }
@@ -850,38 +847,23 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	line-height: 160px;
 }
 
-.workshop_showcase_mutiitem_ctn {
-	float: left;
-	max-width: 25%;
-	width: 154px;
-}
-
-.workshop_showcase_multiitem.showcase_slot {
-	position: relative;
-	float: none;
+.workshop_showcase_multiitem {
+	height: 150px;
+	width: 150px;
 	margin: 2px;
-}
-
-.workshop_showcase_multiitem img.workshop_showcase_item_image {
-	width: 100%;
+	position: relative;
 }
 
 .workshop_showcase_multiitem.openslot {
 	margin: 0;
 }
 
-.workshop_showcase_item img.workshop_showcase_item_image {
-	float: left;
+img.workshop_showcase_item_image {
+	position: absolute;
+	top: 0;
+	left: 0;
 	width: 160px;
-	max-width: 40%;
-	margin-right: 8px;
-	display: block;
-}
-
-.workshop_showcase_right_col {
-	overflow: hidden;
-	position: relative;
-	height: 100%;
+	height: 160px;
 }
 
 .myworkshop_showcase_header {
@@ -906,6 +888,11 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	color: #ffffff;
 }
 
+.workshop_showcase_multiitem img.workshop_showcase_item_image {
+	width: 150px;
+	height: 150px;
+}
+
 .workshop_showcase_mini_app {
 	position: absolute;
 	right: 0;
@@ -919,7 +906,7 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 
 .workshop_showcase_details_row {
 	position: absolute;
-	left: 0;
+	left: 170px;
 	bottom: 0;
 	right: 0;
 
@@ -983,9 +970,11 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 
 	background: -webkit-gradient(linear, left top, right top, color-stop(5%,#000000), color-stop(95%,#282828));filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#282828',GradientType=1 );background: -moz-linear-gradient( left, #000000 5%,#282828 95%);background: -webkit-linear-gradient( left, #000000 5%,#282828 95%);background: -o-linear-gradient( left, #000000 5%,#282828 95%);background: -ms-linear-gradient( left, #000000 5%,#282828 95%);background: linear-gradient( to right, #000000 5%,#282828 95%);}
 
-.myguide_showcase_item_ctn {
-	width: 48%;
+.myguide_showcase_item {
+	width: 280px;
+	height: 68px;
 	overflow: hidden;
+	padding: 10px;
 
 	background-color: #101214;
 	background-color: rgba( 0, 0, 0, 0.3 );
@@ -993,15 +982,6 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	border: 1px solid transparent;
 	border-radius: 3px;
 	margin-bottom: 7px;
-}
-
-.myguide_showcase_item_ctn.openslot {
-	height: 88px;
-}
-
-.myguide_showcase_item {
-	padding: 10px;
-	height: 68px;
 }
 
 .myguide_showcase_item_overlay {
@@ -1014,7 +994,7 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 }
 
 .myguide_showcase_item.left {
-	margin-right: 2%;
+	margin-right: 7px;
 }
 
 .myguide_showcase_item:hover {
@@ -1024,28 +1004,10 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 .guide_showcase_img_ctn {
 	float: left;
 	position: relative;
-	width: 66px;
-	max-width: 25%;
+	width: 68px;
+	height: 68px;
 
 	margin-right: 8px;
-}
-
-.guide_showcase_img_ctn img.guide_showcase_image {
-	width: 100%;
-	display: block;
-}
-
-.guide_showcase_item_content {
-	overflow: hidden;	/* prevents wrapping below image */
-}
-
-@media screen and (max-width: 460px) {
-	html.responsive .myguide_showcase_item_ctn.left,
-	html.responsive .myguide_showcase_item_ctn {
-		margin-right: 0;
-		width: auto;
-		float: none;
-	}
 }
 
 .guide_showcase_img_ctn .workshop_showcase_mini_app, .guide_showcase_img_ctn .workshop_showcase_mini_app img {
@@ -1053,7 +1015,7 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	height: 18px;
 }
 
-.myguide_showcase_item_ctn.showcase_slot .showcase_openslot_placeholder {
+.myguide_showcase_item.showcase_slot .showcase_openslot_placeholder {
 	line-height: 88px;
 }
 
@@ -1068,16 +1030,14 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 
 .screenshot_showcase_primary {
 	width: 508px;
-	max-width: 83%;
 	float: left;
+	min-height: 268px;
 }
 
 .screenshot_showcase_screenshot {
 	cursor: pointer;
 	border: 1px solid #000000;
 	display: block;
-	white-space: nowrap;
-	overflow: hidden;
 }
 
 .screenshot_showcase_screenshot:hover {
@@ -1088,18 +1048,8 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	margin-bottom: 4px;
 }
 
-
-.screenshot_showcase_screenshot img {
-	display: block;
-}
-
-.screenshot_showcase_itemname {
-	word-wrap: break-word;
-}
-
 .screenshot_showcase_rightcol {
 	float: right;
-	max-width: 17%;
 	width: 102px;
 	text-align: center;
 }
@@ -1115,10 +1065,6 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 	line-height: 57px;
 	background-color: #222223;
 	color: #ffffff;
-}
-
-.screenshot_showcase_smallscreenshot.openslot {
-	height: 79px;
 }
 
 .screenshot_showcase_stats {
@@ -1283,9 +1229,8 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 }
 
 .game_info_achievement {
-	vertical-align: top;
 	display: inline-block;
-	margin-left: 4px;
+	margin-left: 6px;
 }
 
 .game_info_achievement:first-child {
@@ -1589,11 +1534,11 @@ html.responsive .localmenu_content .profile_badges_badge img {
 	position: absolute;
 	left: 120px;
 	right: 30px;
-	bottom: 31px;
-	max-height: 65px;
+	top: 40px;
 	color: white;
 	font-size: 14px;
 
+	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
