--- a/css/profilev2.css
+++ b/css/profilev2.css
@@ -1092,6 +1092,11 @@ html.responsive .showcase_gamecollector_games .showcase_gamecollector_game:first
 .screenshot_showcase_screenshot img {
 	display: block;
 }
+.screenshot_showcase_screenshot div {
+	display: block;
+	width: 100px;
+	height: 80px;
+}
 
 .screenshot_showcase_itemname {
 	word-wrap: break-word;
