--- a/css/shared_global.css
+++ b/css/shared_global.css
@@ -159,7 +159,7 @@
 	position: absolute;
 	left: 26px;
 	top: 23px;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/friendindicator_small.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/friendindicator_small.png' );
 	width: 20px;
 	height: 20px;
 	z-index: 2;
@@ -353,19 +353,19 @@
 }
 
 .miniprofile_teammember.team_red {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_red.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_red.png' );
 }
 .miniprofile_teammember.team_blue {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_blue.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_blue.png' );
 }
 .miniprofile_teammember.team_pink {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_pink.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_pink.png' );
 }
 .miniprofile_teammember.team_green {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_green.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_green.png' );
 }
 .miniprofile_teammember.team_purple {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_purple.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/promo/summer2014/minip_purple.png' );
 }
 
 
@@ -376,7 +376,7 @@
 .pulldown {
 	padding-left: 5px;
 	padding-right: 18px;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/popups/btn_arrow_down_padded.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/popups/btn_arrow_down_padded.png' );
 	background-position: right center;
 	background-repeat: no-repeat;
 
@@ -387,7 +387,7 @@ body.v6 .pulldown {
 }
 span.popup_menu_pulldown_indicator {
 	display: inline-block;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/popups/btn_arrow_down.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/popups/btn_arrow_down.png' );
 	vertical-align: middle;
 	width: 9px;
 	height: 4px;
@@ -405,7 +405,7 @@ span.popup_menu_pulldown_indicator {
 	position: relative;
 
 	background-color: #3b3938;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/popups/bg_popup.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/popups/bg_popup.png' );
 	background-repeat: repeat-x;
 	background-position: top;
 }
@@ -557,36 +557,36 @@ body.v6 .popup_block_new .popup_body.popup_menu {
 }
 
 .friendPlayerLevel.lvl_100 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_hexagons.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_hexagons.png' );
 }
 
 .friendPlayerLevel.lvl_200 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shields.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shields.png' );
 }
 
 .friendPlayerLevel.lvl_300 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_books.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_books.png' );
 	text-shadow: 1px 1px #1a1a1a;
 }
 
 .friendPlayerLevel.lvl_400 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_chevrons.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_chevrons.png' );
 }
 
 .friendPlayerLevel.lvl_500 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_circle2.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_circle2.png' );
 }
 
 .friendPlayerLevel.lvl_600 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_angle.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_angle.png' );
 }
 
 .friendPlayerLevel.lvl_700 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_flag.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_flag.png' );
 }
 
 .friendPlayerLevel.lvl_800 {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_wings.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_wings.png' );
 }
 
 .friendPlayerLevel.lvl_plus_10 {
@@ -770,7 +770,7 @@ select.gray_bevel {
 {
 	width: 32px;
 	height: 32px;
-	background: url( 'http://steamcommunity-a.akamaihd.net/public/images/login/throbber.gif' ) center center no-repeat;
+	background: url( 'https://steamcommunity-a.akamaihd.net/public/images/login/throbber.gif' ) center center no-repeat;
 	margin-right: 5px;
 	float: left;
 }
@@ -823,7 +823,7 @@ select.gray_bevel {
 .emoticon_hover_arrow {
 	width: 13px;
 	height: 26px;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/popups/hover_arrow_both.gif' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/popups/hover_arrow_both.gif' );
 	background-repeat: no-repeat;
 
 	position: absolute;
@@ -953,7 +953,7 @@ div#global_header .menuitem.active, div#global_header .menuitem:hover {
 }
 
 div#global_header .menuitem.active {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/globalheader_highlight.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/globalheader_highlight.png' );
 	background-repeat: repeat-x;
 }
 
@@ -996,11 +996,11 @@ div#global_header .activebg {
 }
 
 .header_installsteam_btn_green .header_installsteam_btn_leftcap, .header_installsteam_btn_green .header_installsteam_btn_rightcap, .header_installsteam_btn_green .header_installsteam_btn_content {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_header_installsteam_green.png?v=1' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_header_installsteam_green.png?v=1' );
 }
 
 .header_installsteam_btn_gray .header_installsteam_btn_leftcap, .header_installsteam_btn_gray .header_installsteam_btn_rightcap, .header_installsteam_btn_gray .header_installsteam_btn_content {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_header_installsteam_gray.png?v=1' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_header_installsteam_gray.png?v=1' );
 }
 
 .header_installsteam_btn_leftcap {
@@ -1097,7 +1097,7 @@ div#global_header .submenuitem.active.moderator, div#global_header .submenuitem.
 
 .supernav_content {
 	max-width: 132px;
-	background: #000 url(http://steamcommunity-a.akamaihd.net/public/shared/images/dd_web.jpg) top left no-repeat;
+	background: #000 url(https://steamcommunity-a.akamaihd.net/public/shared/images/dd_web.jpg) top left no-repeat;
 	padding: 5px 15px 10px 15px;
 	box-shadow: 3px 3px 5px -3px #000;
 	text-align: left;
@@ -1137,7 +1137,7 @@ div#global_header .submenuitem.active.moderator, div#global_header .submenuitem.
 }
 
 .header_notification_empty {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_notification_grey.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_notification_grey.png' );
 	background-repeat: no-repeat;
 	background-position: center top;
 	width: 29px;
@@ -1159,7 +1159,7 @@ div#global_header .submenuitem.active.moderator, div#global_header .submenuitem.
 }
 
 .header_notification_green, .header_notification_green .leftcap, .header_notification_green .rightcap {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_notification_green.png?=1' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_notification_green.png?=1' );
 }
 
 .header_notification_green:hover, .header_notification_green.focus {
@@ -1218,7 +1218,7 @@ div#global_header .submenuitem.active.moderator, div#global_header .submenuitem.
 	background-position: center;
 	margin-right: 16px;
 
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_icons_sprite.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_icons_sprite.png' );
 }
 
 .header_notification_comments .notification_icon {
@@ -1243,20 +1243,20 @@ div#global_header .submenuitem.active.moderator, div#global_header .submenuitem.
 
 /* these are shown conditionally so not a big deal that they aren't in the sprite */
 .header_notification_tradeoffers .notification_icon {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_tradeoffers.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_tradeoffers.png' );
 }
 
 .header_notification_asyncgame .notification_icon {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_async_game.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_async_game.png' );
 }
 
 .header_notification_asyncgameinvite .notification_icon {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_async_game_invite.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_async_game_invite.png' );
 }
 
 /* re-uses comment icon */
 .header_notification_moderatormessage .notification_icon {
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_moderator_message.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/inbox_moderator_message.png' );
 }
 
 
@@ -1272,7 +1272,7 @@ div#global_header .submenuitem.active.moderator, div#global_header .submenuitem.
 	top: -1px;
 	height: 30px;
 
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_parent.png' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/header/btn_parent.png' );
 	background-position: center center;
 	background-repeat: no-repeat;
 
@@ -1328,19 +1328,19 @@ a.dynamiclink_box {
 .dynamiclink_box.workshop_item {
 	background-repeat: no-repeat;
 	background-position: right bottom;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/sharedfiles/bg_shared_item_workshop.jpg' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/sharedfiles/bg_shared_item_workshop.jpg' );
 }
 
 .dynamiclink_box.greenlight_item {
 	background-repeat: no-repeat;
 	background-position: right bottom;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/sharedfiles/bg_shared_item_greenlight.jpg' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/sharedfiles/bg_shared_item_greenlight.jpg' );
 }
 
 .dynamiclink_box.webguide_item {
 	background-repeat: no-repeat;
 	background-position: right bottom;
-	background-image: url( 'http://steamcommunity-a.akamaihd.net/public/shared/images/sharedfiles/bg_shared_item_guide.jpg' );
+	background-image: url( 'https://steamcommunity-a.akamaihd.net/public/shared/images/sharedfiles/bg_shared_item_guide.jpg' );
 }
 
 .dynamiclink_box.newspost .dynamiclink_description {
