--- a/css/modalContent.css
+++ b/css/modalContent.css
@@ -1,77 +1,69 @@
-
-.modalBody
-{
-	overflow-y: scroll;
-	overflow-x: auto;
+.modalBody {
+   overflow-y: scroll;
+   overflow-x: auto;
 }
 
-#modalContent.modal_frame
-{
-	min-width: 480px;
-	height: 600px;
-	border: 2px solid #4b4b4b;
-	border-radius: 2px;
-	-moz-border-radius: 2px;
-	background-color: black;
+#modalContent.modal_frame {
+   min-width: 480px;
+   height: 600px;
+   border: 2px solid #4b4b4b;
+   border-radius: 2px;
+   -moz-border-radius: 2px;
+   background-color: black;
 }
 
-#modalContentTitleBar
-{
-	color: white;
-	padding: 4px 2px 4px 8px;
-	text-align: left;
-    background-color: #4b4b4b;
-	/*background: rgb(88,88,88); /* Old browsers */
-	/*background: -moz-linear-gradient(top,  rgba(88,88,88,1) 0%, rgba(76,76,76,1) 100%); /* FF3.6+ */
-	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(88,88,88,1)), color-stop(100%,rgba(76,76,76,1))); /* Chrome,Safari4+ */
-	/*background: -webkit-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* Chrome10+,Safari5.1+ */
-	/*background: -o-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* Opera 11.10+ */
-	/*background: -ms-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* IE10+ */
-	/*background: linear-gradient(to bottom,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#585858', endColorstr='#4c4c4c',GradientType=0 ); /* IE6-9 */
+#modalContentTitleBar {
+   color: white;
+   padding: 4px 2px 4px 8px;
+   text-align: left;
+   background-color: #4b4b4b;
+   /*background: rgb(88,88,88); /* Old browsers */
+   /*background: -moz-linear-gradient(top,  rgba(88,88,88,1) 0%, rgba(76,76,76,1) 100%); /* FF3.6+ */
+   /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(88,88,88,1)), color-stop(100%,rgba(76,76,76,1))); /* Chrome,Safari4+ */
+   /*background: -webkit-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* Chrome10+,Safari5.1+ */
+   /*background: -o-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* Opera 11.10+ */
+   /*background: -ms-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* IE10+ */
+   /*background: linear-gradient(to bottom,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* W3C */
+   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#585858', endColorstr='#4c4c4c', GradientType=0);
+   /* IE6-9 */
 }
 
-.modalContentDismissImage
-{
-	position: absolute;
-	top: 5px;
-	right: -4px;
-	cursor: pointer;
-	width: 18px;
-	height: 14px;
+.modalContentDismissImage {
+   position: absolute;
+   top: 5px;
+   right: -4px;
+   cursor: pointer;
+   width: 18px;
+   height: 14px;
 }
 
-#modalContentWait
-{
-	position: absolute;
-	top: 24px;
-	bottom: 11px;
-	right: 11px;
-	left: 11px;
-	background-color: black;
-	padding-top: 267px;
-	text-align: center;
+#modalContentWait {
+   position: absolute;
+   top: 24px;
+   bottom: 11px;
+   right: 11px;
+   left: 11px;
+   background-color: black;
+   padding-top: 267px;
+   text-align: center;
 }
 
-#modalContentScrollbarHack
-{
-	position: fixed;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	overflow-y: scroll;
-	overflow-x: auto;
-	z-index:901;
+#modalContentScrollbarHack {
+   position: fixed;
+   top: 0;
+   bottom: 0;
+   left: 0;
+   right: 0;
+   overflow-y: scroll;
+   overflow-x: auto;
+   z-index: 901;
 }
 
-#modalContentFrameContainer
-{
-	background-color: black;
+#modalContentFrameContainer {
+   background-color: black;
 }
 
-.modalContent_iFrame
-{
-	width: 100%;
-	border: none;
+.modalContent_iFrame {
+   width: 100%;
+   border: none;
 }
