Modal update has come!
Moved features that customize cropping into a new modal

--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,16 @@
    top: 21px;
 }
 
+.newmodal_background {
+	position: fixed;
+	z-index: 900;
+	background: #000000;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+}
+
 .bg_link {
    position: relative;
    top: 5px;
