--- a/css/modalContent.css
+++ b/css/modalContent.css
@@ -4,9 +4,9 @@
 }
 
 #modalContent.modal_frame {
-   min-width: 480px;
+   min-width: 310px;
    height: 600px;
-   border: 2px solid #4b4b4b;
+   border: 2px solid #304a66;
    border-radius: 2px;
    -moz-border-radius: 2px;
    background-color: black;
@@ -16,7 +16,7 @@
    color: white;
    padding: 4px 2px 4px 8px;
    text-align: left;
-   background-color: #4b4b4b;
+   background-color: #304a66;
    /*background: rgb(88,88,88); /* Old browsers */
    /*background: -moz-linear-gradient(top,  rgba(88,88,88,1) 0%, rgba(76,76,76,1) 100%); /* FF3.6+ */
    /*background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(88,88,88,1)), color-stop(100%,rgba(76,76,76,1))); /* Chrome,Safari4+ */
@@ -24,7 +24,7 @@
    /*background: -o-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* Opera 11.10+ */
    /*background: -ms-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* IE10+ */
    /*background: linear-gradient(to bottom,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* W3C */
-   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#585858', endColorstr='#4c4c4c', GradientType=0);
+   */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#585858', endColorstr='#4c4c4c', GradientType=0);
    /* IE6-9 */
 }
 
@@ -66,4 +66,21 @@
 .modalContent_iFrame {
    width: 100%;
    border: none;
+}
+
+.communityBanDialog_label {
+   width: 100px;
+   display: inline-block;
+}
+
+.communityBanDialog_data {
+   display: inline-block;
+}
+
+.communityBanDialog_row {
+   margin-bottom: 5px;
+}
+
+.communityBanDialog_description {
+   margin-top: 10px;
 }
