--- a/css/index.css
+++ b/css/index.css
@@ -219,3 +219,55 @@
    float: right;
    margin: 1px;
 }
+
+.market_listing_row .bg_link {
+   margin: 0 10px 0 10px;
+   width: auto;
+}
+
+.market_listing_row .bg_link .gray_bevel.for_text_input {
+   padding: 0;
+   margin-bottom: 10px;
+   width: 100%;
+}
+
+.market_listing_row .bg_link .gray_bevel.for_text_input .btn_profile_action.btn_medium {
+   position: relative;
+   left: -2px;
+   top: -2px;
+   border-radius: 2px 0 0 2px;
+}
+
+.market_listing_row .bg_link .gray_bevel.for_text_input .btn_profile_action.btn_medium span{
+   line-height: 26px;
+}
+
+.market_listing_row .bg_link .gray_bevel.for_text_input input {
+   font-size: 18px;
+   width: 415px;
+}
+
+.copiedNotification {
+   width: 200px;
+   height: 75px;
+   position: fixed;
+   left: 50%;
+   top: 50%;
+   transform: translateX(-50%);
+   z-index: 2000;
+   display: none;
+}
+
+.copiedNotification .notificationBG {
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.8);
+   border-radius: 15px;
+}
+
+.copiedNotification div {
+   padding-top: 1px;
+   font-size: 25px;
+   margin: 23px 20px 20px 55px;
+   color: #e2e2e2;
+}
