--- a/css/modalContent.css
+++ b/css/modalContent.css
@@ -24,7 +24,7 @@
    /*background: -o-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* Opera 11.10+ */
    /*background: -ms-linear-gradient(top,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* IE10+ */
    /*background: linear-gradient(to bottom,  rgba(88,88,88,1) 0%,rgba(76,76,76,1) 100%); /* W3C */
-   */ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#585858', endColorstr='#4c4c4c', GradientType=0);
+   /* filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#585858', endColorstr='#4c4c4c', GradientType=0); */
    /* IE6-9 */
 }
 
