Dont add movement arrows until customization is opened

--- a/css/newui.css
+++ b/css/newui.css
@@ -25,6 +25,10 @@
     background-image: none;
 }
 
+.profile_customization_header{
+    height: 30px !important;
+}
+
 .profile_content{
     margin-top: 0px !important; 
     padding-top: 0px !important;
