--- a/css/newui.css
+++ b/css/newui.css
@@ -101,6 +101,13 @@
     border: none;
     background: #08090b;
     outline: none;
+    opacity: 1;
+    transition: all 0.25s ease;
+}
+
+.filterHide {
+    opacity: 0;
+    transition: all 0.25s ease;
 }
 
 .underfr {
