Change body background color

--- a/css/globalv2.css
+++ b/css/globalv2.css
@@ -3,7 +3,7 @@ html {
  }
  
  body {
-    background: #1b2838;
+    background: #12151a;
     text-align: left;
     color: #8F98A0;
     font-size: 14px;
